# amdaemon

./: .gitignore  CMakeLists.txt  amdaemon.sln
amdaemon/: amdaemon.vcxproj  amdaemon.vcxproj.filters
amdaemon/src/: main.cpp
amdaemon/src/process/: ArgumentsParser.cpp  ArgumentsParser.h
amdaemon/src/util/: LaunchChecker.cpp  LaunchChecker.h  Mutex.cpp  Mutex.h
